<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="activity_1_other_thing">+ 1 other thing</string>
    <string name="activity_1_other_user">+ 1 other user</string>
    <string name="activity_message_commented_on_a_thing">%s commented on a thing</string>
    <string name="activity_message_fancyd_your_thing">"%1$s Fancy'd %2$s."</string>
    <string name="activity_message_started_following">Started following %s</string>
    <string name="activity_message_started_following_you">%s started following you.</string>
    <string name="activity_n_other_things">+ %d other things</string>
    <string name="activity_n_other_users">+ %d other users</string>
    <string name="activity_no_result">You have no activity yet.</string>
    <string name="activity_resolver_use_always">Always</string>
    <string name="activity_resolver_use_once">Just once</string>
    <string name="activity_title_commented">Commented</string>
    <string name="add_thing_rotate_picture">Rotate</string>
    <string name="addlist_button_add">Add to List</string>
    <string name="addlist_button_edit">Edit Lists</string>
    <string name="addlist_button_unfancy">Unfancy</string>
    <string name="addlist_new_list">Create a New List</string>
    <string name="addlist_title">Add to List</string>
    <string name="addlist_title_edit">Edit Lists</string>
    <string name="addtocart_item_info">Item info</string>
    <string name="addtocart_no_option_available">No option available</string>
    <string name="addtocart_see_more_details">View more details</string>
    <string name="addtolist_add_to_owns">Add to Owns</string>
    <string name="addtolist_add_to_wants">Add to Wants</string>
    <string name="addtolist_added_to_owns">Added to Owns</string>
    <string name="addtolist_added_to_wants">Added to Wants</string>
    <string name="addtolist_collect">Collect</string>
    <string name="addtolist_creating_a_new_list">Write a name for your list</string>
    <string name="addtolist_your_lists">Your lists</string>
    <string name="alert_join_now">Join now! It takes less than 30 seconds.</string>
    <string name="api_auth_error">Authentication Error</string>
    <string name="api_invalid_response">Invalid Response</string>
    <string name="api_network_error">Network Error</string>
    <string name="api_no_content">No Content</string>
    <string name="api_operation_fail">Operation Failed</string>
    <string name="api_server_error">Server Error</string>
    <string name="api_unknown_error">Something went terribly wrong. :(</string>
    <string name="app_name">Fancy</string>
    <string name="app_share_name">Add to Fancy</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="back_button_label">Back</string>
    <string name="badge_type_deal">Deal</string>
    <string name="badge_type_promotion">Promotion</string>
    <string name="banner_holiday_coupon_action_message">The coupon has been saved. You can now apply it to your cart!</string>
    <string name="banner_holiday_coupon_action_title">Get it now</string>
    <string name="banner_holiday_coupon_desc">Get 20% off your purchase with Fancy Coupon.</string>
    <string name="banner_holiday_coupon_text">Discover and shop the best gifts for the upcoming holiday season and get them hand-delivered to you the same day.</string>
    <string name="banner_holiday_coupon_title">Find your holiday gifts on Fancy</string>
    <string name="button_apply">Apply</string>
    <string name="button_back">Go Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_lets_do_it">"Let's do it"</string>
    <string name="button_no_thanks">No thanks</string>
    <string name="button_okay">Okay</string>
    <string name="candidates_style">candidates</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="card_close_button">Close</string>
    <string name="card_cvv_help">The security code is the last three digits on the back of your credit card.</string>
    <string name="card_cvv_help_amex">The security code is the four digit code on the front of your card.</string>
    <string name="card_error_cvc">Invalid security code</string>
    <string name="card_error_month">Invalid month</string>
    <string name="card_error_pan">Please check your credit card number.</string>
    <string name="card_error_year">Invalid year</string>
    <string name="card_primary_method">Primary payment method</string>
    <string name="cart_header_your_order">Your Order</string>
    <string name="cart_hint_optional_note_to">Optional note to %s</string>
    <string name="cart_item_sameday_delivery_notice_area">Available in %s</string>
    <string name="cart_item_sameday_delivery_notice_order_by">Order before %s and get it today!</string>
    <string name="cart_order_total">Order total</string>
    <string name="cart_overlay_totalprice">Total: %s</string>
    <string name="cart_title_coupon_code">Coupon code</string>
    <string name="cart_title_gift_checkbox">This is a Gift</string>
    <string name="gift_expert_recommend">Get the Gift Recommendations from the <b>Fancy experts</b>.</string>
    <string name="gift_recommend_reminder">Try <b>Fancy Gift Recommendation</b> and find a perfect gift!</string>
    <string name="giftcard_redeem_button">Redeem</string>
    <string name="groupgift_help_how">How it works</string>
    <string name="groupgift_help_step1">Create</string>
    <string name="groupgift_help_step1_desc">A fun and easy way to give gifts to your friends.</string>
    <string name="groupgift_help_step2">Contribute</string>
    <string name="groupgift_help_step2_desc">"Pick any item, contribute any amount. You're only charged if the group gift is successful."</string>
    <string name="groupgift_help_step3">Success</string>
    <string name="groupgift_help_step3_desc">Invite your friends to contribute. Once you meet your target, Fancy will take care of the rest!</string>
    <string name="groupgift_help_tagline">Gather your friends and give amazing gifts from Fancy to people you love.</string>
    <string name="groupgift_help_title">Start a Group Gift Today</string>
    <string name="invite_fancy_credit">Fancy Credit</string>
    <string name="password_confirm_password">Confirm Password</string>
    <string name="password_current_password">"Current Password (Blank if you don't have one)"</string>
    <string name="password_help_message">Password must be at least 6 characters.</string>
    <string name="password_new_password">New Password</string>
    <string name="setting_anonymous_desc">Help us improve the app!</string>
    <string name="setting_change_password">Change Password</string>
    <string name="setting_disable_google_wallet">Disable Google Wallet</string>
    <string name="setting_disable_google_wallet_desc">Wallet is available in US only</string>
    <string name="setting_edit_profile">Edit Profile</string>
    <string name="setting_email_comment">"Someone comments on something I Fancy'd"</string>
    <string name="setting_email_featured">One of my finds is featured</string>
    <string name="setting_email_follow">Someone starts following me</string>
    <string name="setting_email_header">Email me when...</string>
    <string name="setting_email_join">Someone I invited joins</string>
    <string name="setting_email_mentioned">Someone mentions me</string>
    <string name="setting_email_news">"There's important news about Fancy"</string>
    <string name="setting_email_settings">Email Setting</string>
    <string name="setting_email_shown">Someone shows me something on Fancy</string>
    <string name="setting_feedback_desc">We welcome your suggestions and reports!</string>
    <string name="setting_feedback_title">Feedback</string>
    <string name="setting_header_linked">Linked Accounts</string>
    <string name="setting_header_misc">Miscellaneous</string>
    <string name="setting_header_profile">Profile</string>
    <string name="setting_language_title">Language</string>
    <string name="setting_noti_comment">"Someone comments on something I Fancy'd"</string>
    <string name="setting_noti_deal">I unlock a deal</string>
    <string name="setting_noti_fancyd">"Someone Fancy's my things"</string>
    <string name="setting_noti_featured">One of my finds is featured</string>
    <string name="setting_noti_follow">Someone follows me</string>
    <string name="setting_noti_friend_comment">A friend posts a comment</string>
    <string name="setting_noti_friend_deal">A friend unlocks a deal</string>
    <string name="setting_noti_friend_follow">A friend follows someone</string>
    <string name="setting_noti_friend_promotion">A friend earns a promotion</string>
    <string name="setting_noti_friend_store">A friend follows a store</string>
    <string name="setting_noti_header">Notify me when...</string>
    <string name="setting_noti_join">Someone I invited joins</string>
    <string name="setting_noti_mention">Someone mentions me</string>
    <string name="setting_noti_promotion">I earn a promotion</string>
    <string name="setting_noti_push_header">Push Notification</string>
    <string name="setting_noti_push_inactive">Inactive</string>
    <string name="setting_noti_push_ringtone">Ringtone</string>
    <string name="setting_noti_push_use">Notifications</string>
    <string name="setting_noti_show">Someone shows me something</string>
    <string name="setting_notification_settings">Notification Setting</string>
    <string name="setting_profile_bio">Bio</string>
    <string name="setting_profile_email">Email</string>
    <string name="setting_profile_fullname">Full name</string>
    <string name="setting_profile_gender">Gender</string>
    <string name="setting_profile_location">Location</string>
    <string name="setting_profile_privacy">Privacy</string>
    <string name="setting_profile_privacy_desc">Make my profile private</string>
    <string name="setting_profile_twitter">Twitter username</string>
    <string name="setting_profile_website">Website</string>
    <string name="setting_showlist_desc">Organize your things in lists</string>
    <string name="setting_showlist_title">Show list on when I Fancy</string>
    <string name="setting_statistics_title">Enable Usage Analytics</string>
    <string name="setting_version_desc">"See What's New"</string>
    <string name="setting_version_title">App Version: %s</string>
</resources>