<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ff333333" android:id="@id/password_old_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/password_current_password" />
    <EditText android:id="@id/password_old" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:password="true" android:singleLine="true" />
    <TextView android:textColor="#ff333333" android:id="@id/password_new_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/password_new_password" />
    <EditText android:id="@id/password_new" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:password="true" android:singleLine="true" />
    <TextView android:textColor="#ff333333" android:id="@id/password_confirm_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/password_confirm_password" />
    <EditText android:id="@id/password_confirm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:password="true" android:singleLine="true" />
    <TextView android:textColor="#ff666666" android:gravity="left|center" android:id="@id/password_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/password_help_message" android:drawableLeft="@drawable/cart_lock_icon" android:drawablePadding="5.0dip" />
</LinearLayout>
