<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/multifeed_back_off" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:layout_width="48.0dip" android:layout_height="52.0dip" android:layout_marginRight="20.0dip" android:src="@drawable/gift_expert_icon" android:contentDescription="@string/gift_recommend_reminder" />
        <TextView android:textSize="18.0sp" android:textColor="#ff515151" android:gravity="left" android:layout_gravity="center" android:id="@id/gift_expert_text" android:paddingTop="10.0dip" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/gift_expert_recommend" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_gift_expert_do_it" android:background="@drawable/button_fancy_blue" android:padding="0.0dip" android:layout_width="140.0dip" android:layout_height="36.0dip" android:layout_marginBottom="10.0dip" android:text="@string/button_lets_do_it" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/button_gift_expert_cancel" android:background="@drawable/button_fancy_gray" android:padding="0.0dip" android:layout_width="140.0dip" android:layout_height="36.0dip" android:text="@string/button_no_thanks" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
